# midisono

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
assets/: readme.txt
src/: main.rs
