[package]
name = "rustedmusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
time = "*"
midir = "0.7.0"
async-std = "1.10.0"

# rust fluidsynth interface is not in crates.io!!
# in github by scholtzan, but not maintained, emailed with no response.
[dependencies.fluidsynth]
git = "https://github.com/tayloredwebsites/rust-fluidsynth"
