[package]
name = "midisono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
time = "*"
midir = "0.7.0"
async-std = "1.10.0"


[dependencies.fluidsynth]

# rust-fluidsynth interface is not in crates.io!!
# in github by scholtzan, but not maintained, emailed with no response.
# nothing seems to be needed to update on it, except possibly docs
git = "https://github.com/tayloredwebsites/rust-fluidsynth"
